Use icons from Google material-icons in place of fontawesome to avoid use of javascript. Header div alignement

--- a/adminapp/static/adminapp/styles_1.css
+++ b/adminapp/static/adminapp/styles_1.css
@@ -164,7 +164,7 @@ display: inline-block;
 .dropbtn {
   background-color: #5533cc /*4CAF50*/;
   color: white;
-  padding: 1.3em;
+  padding: 1.1em;
   font-size: 1em;
   border: none;
   cursor: pointer;
@@ -177,6 +177,8 @@ display: inline-block;
 .dropdown {
   position: relative;
   display: inline-block;
+  padding: 0px;
+  margin: 0px;
 }
 
 .dropdown-content {
